<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Kalender</string>
    <string name="title_home">Heute</string>
    <string name="title_dashboard">Kalender</string>
    <string name="title_notifications">Diagramme</string>
    <string name="abbrechen_termineinfuegen">Abbrechen</string>
    <string name="bestaetigen_termineinfuegen">Bestätigen</string>
    <string name="loeschen_terminbearbeiten">Löschen</string>
    <string name="datum">Datum</string>
    <string name="content_description_termin_hinzufuegen_button">Hier klicken, um Termin hinzuzufügen</string>
    <string name="notizfeldbeschreibung_heute">Halte hier Erlebnisse fest</string>
    <string name="button_speichern">speichern</string>

    <string name="checkBox_sport">Sport</string>
    <string name="checkBox_arbeitSchule">Arbeit/Schule</string>
    <string name="checkBox_verabredung">Treffen mit Freunden/Famile</string>
    <string name="checkBox_feier">Feier</string>




    <string-array name="day_array">
            <item>01</item>
            <item>02</item>
            <item>03</item>
            <item>04</item>
            <item>05</item>
            <item>06</item>
            <item>07</item>
            <item>08</item>
            <item>09</item>
            <item>10</item>
            <item>11</item>
            <item>12</item>
            <item>13</item>
            <item>14</item>
            <item>15</item>
            <item>16</item>
            <item>17</item>
            <item>18</item>
            <item>19</item>
            <item>20</item>
            <item>21</item>
            <item>22</item>
            <item>23</item>
            <item>24</item>
            <item>25</item>
            <item>26</item>
            <item>27</item>
            <item>28</item>
            <item>29</item>
            <item>30</item>
            <item>31</item>

        </string-array>

    <string-array name="month_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>


    <string-array name="year_array">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>

    </string-array>


    <string-array name="hour_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>


    </string-array>


    <string-array name="minute_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>

    </string-array>


    <string-array name="second_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>

    </string-array>


</resources>
