<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_termineinfuegen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />


    <EditText
        android:id="@+id/aktivitaetEingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="400dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Hier Termin und Uhrzeit eingeben"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_edit_text" />

    <Button
        android:id="@+id/button_bestaetigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="260dp"
        android:background="#B0B4CF8F"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/bestaetigen_termineinfuegen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_termineinfuegen" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:background="#A3926060"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="zurueckZurHauptansicht"
        android:text="@string/abbrechen_termineinfuegen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/button_bestaetigen"
        app:layout_constraintTop_toBottomOf="@+id/text_termineinfuegen" />

    <TextView
        android:id="@+id/datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="134dp"
        android:text="@string/datum"
        app:layout_constraintBottom_toTopOf="@+id/aktivitaetEingabe"
        app:layout_constraintEnd_toStartOf="@+id/date_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bestaetigen"
        app:layout_constraintVertical_bias="0.224" />

    <EditText
        android:id="@+id/date_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/aktivitaetEingabe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datum"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>