<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_termineinfuegen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/aktivitaetEingabe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:layout_marginBottom="328dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Hier Text eingeben"
        android:inputType="textMultiLine"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:layout_marginBottom="96dp"
        android:background="#B0B4CF8F"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="neuerTermin"
        android:text="@string/bestaetigen_termineinfuegen"
        app:layout_constraintBottom_toTopOf="@+id/day_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_termineinfuegen" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="96dp"
        android:background="#A3926060"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="zurueckZurHauptansicht"
        android:text="@string/abbrechen_termineinfuegen"
        app:layout_constraintBottom_toTopOf="@+id/month_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/text_termineinfuegen" />

    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:entries="@array/day_array"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/datum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:entries="@array/month_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/year_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/day_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="464dp"
        android:entries="@array/year_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uhrzeit"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="416dp"
        android:text="Uhrzeit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hour_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/hour_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="314dp"
        android:entries="@array/hour_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minute_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/minute_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="314dp"
        android:entries="@array/minute_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/second_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="314dp"
        android:entries="@array/second_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minute_spinner"
        app:layout_constraintTop_toBottomOf="@+id/month_spinner"
        app:layout_constraintVertical_bias="0.011" />


</androidx.constraintlayout.widget.ConstraintLayout>